fixed card spacing

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -147,7 +147,7 @@ section h1 {
 .grid-container2 {
   display: grid;
   grid-auto-flow: column;
-  grid-gap: 100px;
+  grid-gap: 1px;
   margin-top: 100px;
   margin-bottom: 100px;
   align-content: center;
